# classroom-downloader

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
.github/workflows/: pages.yml
.venv2/: pyvenv.cfg
.venv2/Scripts/: activate  activate.bat
docs/: app.js  index.html  styles.css
